tests/baselines/reference/ExportInterfaceWithInaccessibleTypeInIndexerTypeAnnotations.errors.txt
==== tests/cases/compiler/ExportInterfaceWithInaccessibleTypeInIndexerTypeAnnotations.ts (2 errors) ====
    module A {
    
        interface Point {
            x: number;
            y: number;
        }
    
        export interface points {
    
            [idx: number]: Point;
                           ~~~~~
!!! error TS2054: Return type of index signature from exported interface has or is using private type 'Point'.
            [idx: string]: Point;
                           ~~~~~
!!! error TS2054: Return type of index signature from exported interface has or is using private type 'Point'.
        }
    }
    
    